--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ button {
     border: none;
     height: 30px;
     width: 120px;
-    font-weight: lighter;
+    font-weight: bold;
 }
 
 .empty-list_title {
